--- a/lib/localization/locales/zh-TW.json
+++ b/lib/localization/locales/zh-TW.json
@@ -7,7 +7,7 @@
   "mascot_design": "吉祥物由",
   "ai_companies_explanation": "您會看到這個畫面，是因為網站管理員啟用了 Anubis 來保護伺服器，避免 AI 公司大量爬取網站內容。這類行為會導致網站當機，讓所有使用者都無法正常存取資源。",
   "anubis_compromise": "Anubis 是一種折衷做法。它採用了類似 Hashcash 的工作量證明機制（Proof-of-Work），該機制最初是為了減少垃圾郵件而提出。其核心概念是：對個別使用者而言，額外的運算負擔可以忽略，但對大規模爬蟲來說，累積起來的成本將大幅增加，從而讓爬取行為變得更困難。",
-  "hack_purpose": "本質上，這是一種權宜的解法，目的是提供一個「夠用」的暫時性防護措施，好讓開發者有更多時間針對無頭瀏覽器進行指紋特徵辨識（例如：分析其字型渲染方式），以便未來不再需要對可能為合法使用者的訪客展示工作量證明頁面。",
+  "hack_purpose": "最終，這是一個佔位符解決方案，以便將更多時間用於指紋識別和識別無頭瀏覽器（例如：透過它們如何進行字體渲染），從而無需向更可能是合法用戶的用戶呈現挑戰工作量證明頁面。",
   "jshelter_note": "請注意，Anubis 需要使用現代 JavaScript 功能，而像 JShelter 這類外掛可能會阻擋這些功能。請為此網域停用 JShelter 或類似的插件。",
   "version_info": "這個網站正在運行 Anubis 版本",
   "try_again": "再試一次",
