--- a/lib/localization/locales/ru.json
+++ b/lib/localization/locales/ru.json
@@ -7,7 +7,7 @@
   "mascot_design": "Дизайн маскота от",
   "ai_companies_explanation": "Вы это видите, потому что администратор этого сайта настроил Anubis для защиты сервера от атак, использующих ИИ, которые агрессивно копируют данные с сайтов. Это может привести к зависанию сайтов и делает их ресурсы недоступными для всех.",
   "anubis_compromise": "Anubis - это компромисс. Anubis использует Proof-of-Work, похожую на Hashcash, для борьбы со спамом в электронной почте. Идея в том, что на отдельных уровнях дополнительная нагрузка не влиятельна, но на уровне массового парсинга она накапливается и значительно удорожает сбор данных.",
-  "hack_purpose": "В реальности, это хак, у которого настоящая цель - предоставить «достаточно хорошее» решение, чтобы можно было потратить больше времени на идентификацию headless-браузеров (например, по тому, как они выполняют отрисовку шрифтов), чтобы не отображать страницу с подтверждением пользователям, которые с гораздо большей вероятностью являются настоящими.",
+  "hack_purpose": "В конечном итоге, это временное решение, чтобы можно было уделить больше времени снятию отпечатков и идентификации безголовых браузеров (например, по тому, как они отрисовывают шрифты), чтобы страница с доказательством работы не требовалась для пользователей, которые с гораздо большей вероятностью являются легитимными.",
   "jshelter_note": "Anubis требует использования современных функций JavaScript, которые плагины, по типу JShelter, отключают. Пожалуйста, отключите JShelter и другие подобные плагины для этого домена.",
   "version_info": "На сайте запущен Anubis версии",
   "try_again": "Попробуйте снова",
