--- a/lib/localization/locales/fi.json
+++ b/lib/localization/locales/fi.json
@@ -60,5 +60,6 @@
   "js_iterations": "toistot",
   "js_finished_reading": "Luettu, jatka →",
   "js_calculation_error": "Laskentavirhe!",
-  "js_calculation_error_msg": "Haasteen laskenta ei onnistunut:"
+  "js_calculation_error_msg": "Haasteen laskenta ei onnistunut:",
+  "simplified_explanation": "Tämä on toimenpide botteja ja haitallisia pyyntöjä vastaan, joka on samanlainen kuin CAPTCHA. Sen sijaan, että joutuisit tekemään työtä itse, selaimesi saa laskentatehtävän, joka sen on ratkaistava varmistaakseen, että se on kelvollinen asiakas. Tätä käsitettä kutsutaan nimellä <a href=\"https://en.wikipedia.org/wiki/Proof_of_work\">Työtodistus</a>. Tehtävä lasketaan muutamassa sekunnissa ja saat pääsyn verkkosivustolle. Kiitos ymmärryksestäsi ja kärsivällisyydestäsi."
 }
