--- a/lib/localization/locales/pt-BR.json
+++ b/lib/localization/locales/pt-BR.json
@@ -60,5 +60,6 @@
   "js_iterations": "iterações",
   "js_finished_reading": "Terminei de ler, continue →",
   "js_calculation_error": "Erro de cálculo!",
-  "js_calculation_error_msg": "Falha ao calcular a validação:"
+  "js_calculation_error_msg": "Falha ao calcular a validação:",
+  "simplified_explanation": "Esta é uma medida contra bots e solicitações maliciosas, semelhante a um CAPTCHA. No entanto, em vez de você mesmo ter que fazer o trabalho, seu navegador recebe uma tarefa de cálculo que ele deve resolver para garantir que seja um cliente válido. Esse conceito é chamado de <a href=\"https://en.wikipedia.org/wiki/Proof_of_work\">Prova de Trabalho</a>. A tarefa é calculada em poucos segundos e você tem acesso ao site. Obrigado pela sua compreensão e paciência."
 }
