--- a/lib/localization/locales/ru.json
+++ b/lib/localization/locales/ru.json
@@ -60,5 +60,6 @@
   "js_iterations": "итераций",
   "js_finished_reading": "Я дочитал, продолжить →",
   "js_calculation_error": "Ошибка расчёта!",
-  "js_calculation_error_msg": "Не удалось рассчитать задачу:"
+  "js_calculation_error_msg": "Не удалось рассчитать задачу:",
+  "simplified_explanation": "Это мера против ботов и вредоносных запросов, аналогичная CAPTCHA. Однако вместо того, чтобы вам приходилось работать самостоятельно, вашему браузеру дается задача вычисления, которую он должен решить, чтобы убедиться, что он является действительным клиентом. Эта концепция называется <a href=\"https://en.wikipedia.org/wiki/Proof_of_work\">Доказательство выполнения работы</a>. Задача рассчитывается за несколько секунд, и вам предоставляется доступ к веб-сайту. Спасибо за понимание и терпение."
 }
